--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -24,89 +24,34 @@ services:
   #  "locale": "de",
   #  "urn:zitadel:iam:org:project:275671427955294244:roles": {"admin": {}}
   # }
-  oidc-server-mock:
-    image: ghcr.io/soluto/oidc-server-mock:latest
+  mockoidc:
+    image: ghcr.io/navikt/mock-oauth2-server:2.1.10
     ports:
-      - '4011:80'
+      - 8080:8080
     environment:
-      ASPNETCORE_ENVIRONMENT: Development
-      SERVER_OPTIONS_INLINE: |
+      JSON_CONFIG: >
         {
-          "AccessTokenJwtType": "JWT",
-          "Discovery": {
-            "ShowKeySet": true
-          },
-          "Authentication": {
-            "CookieSameSiteMode": "Lax",
-            "CheckSessionCookieSameSiteMode": "Lax"
-          }
-        }
-      LOGIN_OPTIONS_INLINE: |
-        {
-          "AllowRememberLogin": true
-        }
-      LOGOUT_OPTIONS_INLINE: |
-        {
-          "AutomaticRedirectAfterSignOut": true
-        }
-      API_SCOPES_INLINE: |
-        - Name: some-app-scope-1
-        - Name: some-app-scope-2
-      API_RESOURCES_INLINE: |
-        - Name: some-app
-          Scopes:
-            - some-app-scope-1
-            - some-app-scope-2
-      USERS_CONFIGURATION_INLINE: |
-        [
-          {
-            "SubjectId":"1",
-            "Username":"delegatoruser_123",
-            "Password":"pwd",
-            "Claims": [
+          "interactiveLogin": true,
+          "httpServer": "NettyWrapper",
+          "tokenCallbacks": [
               {
-                "Type": "family_name",
-                "Value": "Tailor",
-                "ValueType": "string"
-              },
-              {
-                "Type": "given_name",
-                "Value": "Sam",
-                "ValueType": "string"
-              },
-              {
-                "Type": "email",
-                "Value": "sam.tailor@gmail.com",
-                "ValueType": "string"
-              },
-              {
-                "Type": "preferred_username",
-                "Value": "samtailor1",
-                "ValueType": "string"
-              },
-              {
-                "Type": "locale",
-                "Value": "de",
-                "ValueType": "string"
-              },
-              {
-                "Type": "urn:zitadel:iam:org:project:275671427955294244:roles",
-                "Value": "{\"admin\": {}}",
-                "ValueType": "json"
+                "issuerId": "issuer1",
+                "tokenExpiry": 120,
+                "requestMappings": [
+                  {
+                    "requestParam": "code",
+                    "match": "code1",
+                    "claims": {
+                      "sub": "subByCode",
+                      "aud": [
+                          "audByCode"
+                      ]
+                    }
+                  }
+                ]
               }
-            ]
-          }
-        ]
-      CLIENTS_CONFIGURATION_PATH: /tmp/config/mock-oidc-clients-config.json
-      ASPNET_SERVICES_OPTIONS_INLINE: |
-        { 
-          "ForwardedHeadersOptions": { 
-            "ForwardedHeaders" : "All"
-          }
+          ]
         }
-    volumes:
-      - ./mock-oidc-clients-config.json:/tmp/config/mock-oidc-clients-config.json:ro
-
   # app:
   #   image: munifydelegator
   #   depends_on:
