--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"svelte-table": "^0.6.3",
 		"sveltekit-superforms": "^2.20.1",
 		"tailwindcss": "^3.4.15",
+		"csv-stringify": "^6.5.2",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.16.0",
 		"validator": "^13.12.0",
@@ -90,8 +91,5 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write ."
 	},
-	"type": "module",
-	"dependencies": {
-		"csv-stringify": "^6.5.2"
-	}
+	"type": "module"
 }
