--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ Thumbs.db
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
-prisma/generated
+prisma/generated/*
 src/lib/paraglide
 
 # Tasks
@@ -28,3 +28,4 @@ src/lib/paraglide
 empheralData/*
 
 $houdini
+tasksOut
