--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"devDependencies": {
 		"@casl/ability": "^6.7.2",
 		"@casl/prisma": "^1.5.0",
+		"@eslint/compat": "^1.2.4",
 		"@faker-js/faker": "^9.2.0",
 		"@fontsource/outfit": "^5.1.0",
 		"@fontsource/roboto-mono": "^5.1.0",
