--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
 		"@fontsource/vollkorn": "^5.1.1",
 		"@inlang/paraglide-js": "1.11.3",
 		"@inlang/paraglide-sveltekit": "0.12.1",
+		"@opentelemetry/exporter-trace-otlp-http": "^0.56.0",
+		"@opentelemetry/instrumentation": "^0.56.0",
+		"@opentelemetry/instrumentation-http": "^0.56.0",
+		"@opentelemetry/sdk-trace-node": "^1.29.0",
+		"@opentelemetry/semantic-conventions": "^1.28.0",
 		"@pothos/core": "^4.3.0",
 		"@pothos/plugin-complexity": "^4.1.0",
 		"@pothos/plugin-prisma": "^4.3.1",
 		"@pothos/plugin-prisma-utils": "^1.2.0",
 		"@pothos/plugin-simple-objects": "^4.1.0",
 		"@pothos/plugin-tracing": "^1.1.0",
+		"@pothos/tracing-opentelemetry": "^1.1.0",
 		"@prisma/client": "^5.22.0",
+		"@prisma/instrumentation": "^6.0.1",
 		"@slack/webhook": "^7.0.3",
 		"@svelte-plugins/datepicker": "^1.0.9",
 		"@sveltejs/adapter-node": "^5.2.10",
