--- a/package.json
+++ b/package.json
@@ -99,10 +99,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"add-translation": "bun run add_new_translation.ts"
+		"add-translation": "bun run add_new_translation.ts",
+		"svelte-markdown": "^0.4.1"
 	},
 	"type": "module",
-	"dependencies": {
-		"svelte-markdown": "^0.4.1"
+	"resolutions": {
+		"marked": "^14.1.3"
 	}
 }
