--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@fontsource/vollkorn": "^5.1.1",
 		"@inlang/paraglide-js": "1.11.3",
 		"@inlang/paraglide-sveltekit": "0.12.1",
+		"@magidoc/plugin-svelte-marked": "^6.2.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.56.0",
 		"@opentelemetry/instrumentation": "^0.56.0",
 		"@opentelemetry/instrumentation-http": "^0.56.0",
@@ -34,6 +35,7 @@
 		"@thisux/sveltednd": "^0.0.16",
 		"@types/eslint": "^9.6.1",
 		"@types/lodash": "^4.17.13",
+		"@types/marked": "^6.0.0",
 		"@types/node-schedule": "^2.1.7",
 		"@weblogin/trendchart-elements": "^2.0.1",
 		"@zerodevx/svelte-toast": "^0.9.6",
@@ -58,6 +60,7 @@
 		"jose": "^5.9.6",
 		"lefthook": "^1.8.4",
 		"lodash": "^4.17.21",
+		"marked": "^15.0.4",
 		"mermaid": "^11.4.0",
 		"munkres-algorithm": "^1.0.2",
 		"nanoid": "^5.0.9",
@@ -99,11 +102,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"add-translation": "bun run add_new_translation.ts",
-		"svelte-markdown": "^0.4.1"
+		"add-translation": "bun run add_new_translation.ts"
 	},
-	"type": "module",
-	"resolutions": {
-		"marked": "^14.1.3"
-	}
+	"type": "module"
 }
