--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"@thisux/sveltednd": "^0.0.16",
 		"@types/eslint": "^9.6.1",
+		"@types/iban": "^0.0.35",
 		"@types/lodash": "^4.17.13",
 		"@types/marked": "^6.0.0",
 		"@types/node-schedule": "^2.1.7",
@@ -57,6 +58,7 @@
 		"graphql-yoga": "^5.10.3",
 		"houdini": "^1.3.1",
 		"houdini-svelte": "^2.0.1",
+		"iban": "^0.0.14",
 		"jose": "^5.9.6",
 		"lefthook": "^1.8.4",
 		"lodash": "^4.17.21",
@@ -89,7 +91,8 @@
 		"vanilla-cookieconsent": "^3.0.1",
 		"vite": "^5.4.11",
 		"world-countries": "^5.0.0",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"@dipser/epc-qr-code.js": "^1.0.3"
 	},
 	"private": true,
 	"scripts": {
@@ -104,5 +107,6 @@
 		"format": "prettier --write .",
 		"add-translation": "bun run add_new_translation.ts"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {}
 }
