--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
 		"vite": "^5.4.11",
 		"world-countries": "^5.0.0",
 		"zod": "^3.23.8",
-		"@dipser/epc-qr-code.js": "^1.0.3"
+		"@dipser/epc-qr-code.js": "^1.0.3",
+		"inquirer": "^12.3.2"
 	},
 	"private": true,
 	"scripts": {
