--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"devDependencies": {
 		"@casl/ability": "^6.7.2",
 		"@casl/prisma": "^1.5.0",
+		"@dipser/epc-qr-code.js": "^1.0.3",
 		"@eslint/compat": "^1.2.4",
-		"@faker-js/faker": "^9.3.0",
+		"@faker-js/faker": "^9.4.0",
 		"@fontsource/outfit": "^5.1.1",
 		"@fontsource/roboto-mono": "^5.1.1",
 		"@fontsource/vollkorn": "^5.1.2",
@@ -59,6 +60,7 @@
 		"houdini": "^1.4.0",
 		"houdini-svelte": "^2.1.0",
 		"iban": "^0.0.14",
+		"inquirer": "^12.3.2",
 		"jose": "^5.9.6",
 		"lefthook": "^1.10.1",
 		"lodash": "^4.17.21",
@@ -91,9 +93,7 @@
 		"vanilla-cookieconsent": "^3.0.1",
 		"vite": "^5.4.11",
 		"world-countries": "^5.0.0",
-		"zod": "^3.24.1",
-		"@dipser/epc-qr-code.js": "^1.0.3",
-		"inquirer": "^12.3.2"
+		"zod": "^3.24.1"
 	},
 	"private": true,
 	"scripts": {
