--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"add-translation": "bun run add_new_translation.ts"
+		"add-translation": "bun run scripts/add_new_translation.ts"
 	},
 	"type": "module",
 	"dependencies": {}
