--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
+      - run: pwd
+      - run: ls -R
       - run: bun install
       - run: bun run lint
       - run: bun test
