--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,8 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
-      - run: pwd
-      - run: ls -R
       - run: bun install
+      - run: bunx svelte-kit sync
       - run: bun run lint
       - run: bun test
